# boost-rust

./: .clang-format  .dprint.jsonc  .gitmodules  Cargo.toml  README.md  build.rs  wrapper.cpp
.github/workflows/: ci.yml
cpp/: wrapper.cpp  wrapper.h
src/: ffi.rs  lib.rs  tests.rs
src/math/: constants.rs  ffi.rs  mod.rs
src/math/ccmath/: mod.rs  sqrt.rs
src/math/distributions/: continuous.rs  discrete.rs  mod.rs  non_central.rs
src/math/special_functions/: acosh.rs  airy.rs  asinh.rs  atanh.rs  bessel.rs  bessel_prime.rs  beta.rs  binomial.rs  cardinal_b_spline.rs  cbrt.rs  chebyshev.rs  cos_pi.rs  digamma.rs  ellint_1.rs  ellint_2.rs  ellint_3.rs  ellint_d.rs  ellint_r.rs  erf.rs  expint.rs  expm1.rs  factorials.rs  fibonacci.rs  gamma.rs  gegenbauer.rs  hankel.rs  hermite.rs  heuman_lambda.rs  hypergeometric.rs  hypot.rs  jacobi.rs  jacobi_elliptic.rs  jacobi_theta.rs  jacobi_zeta.rs  laguerre.rs  lambert_w.rs  legendre.rs  log1p.rs  logsumexp.rs  mod.rs  (+13 more)
