[package]
name = "boost"
version = "0.0.5+1.89.0"
authors = ["Joren Hammudoglu <jhammudoglu@gmail.com>"]
categories = ["api-bindings", "mathematics", "science", "no-std"]
edition = "2024"
include = [
  "*.rs",
  "wrapper.cpp",
  #
  "subprojects/boost_math/math/include/boost/math/ccmath",
  "subprojects/boost_math/math/include/boost/math/constants",
  "subprojects/boost_math/math/include/boost/math/policies",
  #
  "subprojects/boost_math/math/include/boost/math/special_functions",
  "!subprojects/boost_math/math/include/boost/math/special_functions/detail/bernoulli_details.hpp",
  "!subprojects/boost_math/math/include/boost/math/special_functions/detail/daubechies_scaling_integer_grid.hpp",
  "!subprojects/boost_math/math/include/boost/math/special_functions/detail/lanczos_sse2.hpp",
  "!subprojects/boost_math/math/include/boost/math/special_functions/detail/unchecked_bernoulli.hpp",
  "!subprojects/boost_math/math/include/boost/math/special_functions/lanczos.hpp",
  "!subprojects/boost_math/math/include/boost/math/special_functions/math_fwd.hpp",
  #
  "subprojects/boost_math/math/include/boost/math/tools",
  "!subprojects/boost_math/math/include/boost/math/tools/detail",
  "!subprojects/boost_math/math/include/boost/math/tools/*_statistics.hpp",
  "!subprojects/boost_math/math/include/boost/math/tools/*_continued_fraction.hpp",
  "!subprojects/boost_math/math/include/boost/math/tools/*_roots.hpp",
  "!subprojects/boost_math/math/include/boost/math/tools/*_expansion.hpp",
  "!subprojects/boost_math/math/include/boost/math/tools/color_maps.hpp",
  "!subprojects/boost_math/math/include/boost/math/tools/norms.hpp",
  "!subprojects/boost_math/math/include/boost/math/tools/polynomial*.hpp",
  "!subprojects/boost_math/math/include/boost/math/tools/ulps_plot.hpp",
]
keywords = ["ffi", "bindings", "math", "boost"]
license = "BSD-3-Clause AND BSL-1.0"
repository = "https://github.com/jorenham/boost-rust"
rust-version = "1.85.1"
description = "Bindings for Boost Math"

[features]
num-complex = ["dep:num-complex"]

[build-dependencies]
cc = "1.2.47"

[dependencies]
[dependencies.num-complex]
version = "0.4.6"
default-features = false
optional = true

[dev-dependencies]
approx = { version = "0.5.1", features = ["num-complex"] }
boost = { path = ".", features = ["num-complex"] }

[profile]
dev = { opt-level = 2 }
release = { strip = true }

[package.metadata.docs.rs]
# https://stackoverflow.com/a/61417700/1627479
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
